--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/donation?serverTimezone=GMT&createDatabaseIfNotExist=true&useTimezone=true
+spring.datasource.url=jdbc:mysql://localhost:3306/south?serverTimezone=GMT&createDatabaseIfNotExist=true&useTimezone=true
 spring.datasource.username=root
 spring.datasource.password=36993377
 
@@ -10,3 +10,14 @@ spring.jpa.open-in-view=true
 
 #JSON
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
+#SWAGGER
+springdoc.swagger-ui.path=/swagger-ui-custom.html
+springdoc.swagger-ui.operationsSorter=method
+
+#LOG
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
+
+#KAFKA
+spring.kafka.producer.bootstrap-servers=localhost:9092
